kubernetes/deployment.yml

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: helloprofile
  namespace: default
  labels:
    app: helloprofile
  annotations:
    persianblackid: io.helloprofile.backend.deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      name: helloprofile
  template:
    metadata:
      labels:
        name: helloprofile
    spec:
      volumes:
        - name: helloprofile-logs-backend
          persistentVolumeClaim:
            claimName: helloprofile-logs
            readOnly: false
      containers:
        - name: helloprofile
          image: gcr.io/bionic-region-347614/github.com/daprinz01/helloprofile
          ports:
            - containerPort: 8083
              protocol: TCP
          resources:
            limits:
              cpu: 20m
              memory: 1500Mi
            requests:
              cpu: 18m
              memory: 1000Mi
          volumeMounts:
            - name: helloprofile-logs-backend
              mountPath: /var/local/bin/log
              readOnly: false
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          imagePullPolicy: Always
          readinessProbe:
            httpGet:
              path: /ping
              port: 8083
          livenessProbe:
            httpGet:
              path: /ping
              port: 8083 
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
      securityContext: {}
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 25%
  revisionHistoryLimit: 10
  progressDeadlineSeconds: 600
