kubernetes/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: helloprofile-ingress
  annotations:
    kubernetes.io/ingress.global-static-ip-name: "helloprofile-ip-address"
    networking.gke.io/managed-certificates: managed-cert
spec:
  defaultBackend:
    service:
      name: helloprofile-service
      port:
        number: 8083
